<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CardFlipper</string>
    <string name="play_game">Play game</string>
    <string name="card_flipper">Card Flipper</string>
    <string name="exit">Exit</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="easy">Easy</string>

    <string name="choose_difficulty">Choose Difficulty</string>
    <string name="scores_0">Scores: 0</string>
    <string name="setting">Setting</string>
    <string name="returntomenu">Return to MENU</string>
    <string name="soundOn">Sound: On</string>
    <string name="play_again">Play Again</string>

    <string name="game_name">Sudoku</string>
    <string name="ingame_menu_name">Settings</string>

</resources>