<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
   android:background="@color/extrapink"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/ExitButton"
            android:layout_width="205dp"
            android:layout_height="50dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/bubblebobble"
            android:text="@string/exit"
            android:textSize="20sp"
            android:textColor="#000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PlayButton" />

        <Button
            android:id="@+id/PlayButton"
            android:layout_width="205dp"
            android:layout_height="50dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/bubblebobble"
            android:text="@string/play_game"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <ImageButton
            android:id="@+id/SoundButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/volume_unmute"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:gravity="center"

            android:fontFamily="@font/bubblebobble"
            android:text="@string/card_flipper"
            android:textColor="@color/pink"
            android:textSize="70sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>